clean exemple part 2

--- a/vignettes/Genomic2DTK.Rmd
+++ b/vignettes/Genomic2DTK.Rmd
@@ -262,7 +262,7 @@ anchors_Index.gnr <- IndexFeatures(
   binSize.int           = binSize.num,
   method.chr            = "max",
   variablesName.chr_vec = "score",
-  cores.num             = 1,
+  # cores.num             = 1,
   verbose.bln           = FALSE
   )
 ```
