--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ Genomic2DTK is a set of genomic interaction analysis tools.
 You can install the development version of Genomic2DTK from [GitHub](https://github.com/) with:
 
 ``` r
-devtools::install_github("NChanard/Genomic2DTK")
+remotes::install_github("NChanard/Genomic2DTK")
 ```
 
 ## Documentation  
