Remove verbose.bln = TRUE
Former-commit-id: b402b7eaf02c4c49f2d5084fe66203cef48cd126

--- a/vignettes/Genomic2DTK.Rmd
+++ b/vignettes/Genomic2DTK.Rmd
@@ -32,7 +32,7 @@ pre[class] {
 }
 ```
 ```{r, Options, echo = FALSE, message = FALSE}
-knitr::opts_chunk$set(collapse = T, comment = "#>")
+knitr::opts_chunk$set(collapse = TRUE, comment = "#>")
 options(tibble.print_min = 4L, tibble.print_max = 4L)
 ```
 
