Correction In depth tuto

--- a/vignettes/InDepth.Rmd
+++ b/vignettes/InDepth.Rmd
@@ -1259,13 +1259,13 @@ PlotAPA() function plots multiple pages of aggregated matrices with different vi
 
 ```{r, eval = TRUE}
 PlotAPA(
-        apa.mtx                  = diffAggreg.mtx,
-        trimPrct.num             = 20,
-        minBoundary.num          = -2,
-        center.num               = 0,
-        maxBoundary.num          = 2,
-        minConditionBoundary.num = 0,
-        maxConditionBoundary.num = 2
+        apa.mtx =        diffAggreg.mtx,
+        trimPrct.num =   20,
+        colMin.num =     -2,
+        colMid.num =     0,
+        colMax.num =     2,
+        colCondMin.num = 0,
+        colCondMax.num = 2
 )
 ```
 
