Corrections lasts TODO 3, and Quick start correction

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,12 +20,14 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/NChanard/Genomic2DTK/branch/master/graph/badge.svg)](https://app.codecov.io/gh/NChanard/Genomic2DTK?branch=master)
 <!-- badges: end -->
 
-This package provides a set of functions useful in the analysis of genomic interaction data, including the import of classical HiC data formats into R, HiC normalisation. Finally, the main objective of this package is to facilitate and improve aggregation analysis.
+This package provides a set of functions useful in the analysis of 3D genomic interactions.
+It includes the import of standard HiC data formats into R and HiC normalisation procedures.
+The main objective of this package is to improve the visualization and quantification of the analysis of HiC contacts through aggreagtion.
 
 
 ## Installation
 
-You can install the development version of Genomic2DTK from [GitHub](https://github.com/) with:
+Development version is avalaible from [GitHub](https://github.com/):
 
 ``` r
 remotes::install_github("NChanard/Genomic2DTK")
